SUBDIRS = src include parser_handlers benchmark	doc_example
ACLOCAL_AMFLAGS = -I m4

pcfiles = liborcus-@ORCUS_API_VERSION@.pc
if BUILD_SPREADSHEET_MODEL
pcfiles += liborcus-spreadsheet-model-@ORCUS_API_VERSION@.pc
endif

pkgconfig_DATA = $(pcfiles)
pkgconfigdir = $(libdir)/pkgconfig

doc_data = \
    doc/conf.py \
    doc/doxygen.conf \
    doc/index.rst \
    doc/cli/index.rst \
    doc/cli/orcus_csv.rst \
    doc/cli/orcus_gnumeric.rst \
    doc/cli/orcus_json.rst \
    doc/cli/orcus_ods.rst \
    doc/cli/orcus_xls_xml.rst \
    doc/cli/orcus_xlsx.rst \
    doc/cli/orcus_xml.rst \
    doc/cli/orcus_yaml.rst \
    doc/cpp/filter/index.rst \
    doc/cpp/index.rst \
    doc/cpp/model/index.rst \
    doc/cpp/model/json.rst \
    doc/cpp/model/spreadsheet.rst \
    doc/cpp/model/yaml.rst \
    doc/cpp/parser/csv.rst \
    doc/cpp/parser/index.rst \
    doc/cpp/parser/json.rst \
    doc/cpp/parser/util.rst \
    doc/cpp/parser/xml.rst \
    doc/cpp/parser/yaml.rst \
    doc/overview/index.rst \
    doc/overview/json.rst \
    doc/python/index.rst

doc_example_data = \
    doc_example/files/document.ods \
    doc_example/files/multi-sheets.ods

bin_data = \
    bin/env-osx.sh \
    bin/run-python.sh

misc_data = \
    misc/xml-tokens/gen-gnumeric-tokens.py \
    misc/xml-tokens/gen-ooxml-tokens.py \
    misc/xml-tokens/gen-odf-tokens.py \
    misc/xml-tokens/ooxml-extra-tokens.txt \
    misc/xml-tokens/xls-xml-tokens.txt \
    misc/xml-tokens/dump-xsd-keys.py \
    misc/xml-tokens/gnumeric.xsd \
    misc/xml-tokens/gen-tokens.py \
    misc/xml-tokens/token_util.py \
    misc/file-processor-modules/preview.py \
    misc/file-processor-modules/extract_formulas.py \
    misc/file-processor-modules/common.py \
    misc/file-processor-modules/process-files.py \
    misc/notes/column-width-and-row-height.txt \
    misc/notes/zlib-in-memory-gzip.txt

slickedit_data = \
    slickedit/sh.vpj \
    slickedit/cpp.vpj \
    slickedit/token-gen.vpj \
    slickedit/cmake.vpj \
    slickedit/orcus.vpw \
    slickedit/python.vpj

test_data = \
    test/css/basic10.css \
    test/css/basic11.css \
    test/css/basic12.css \
    test/css/basic13.css \
    test/css/basic14.css \
    test/css/basic1.css \
    test/css/basic2.css \
    test/css/basic3.css \
    test/css/basic4.css \
    test/css/basic5.css \
    test/css/basic6.css \
    test/css/basic7.css \
    test/css/basic8.css \
    test/css/basic9.css \
    test/css/chained1.css \
    test/css/chained2.css \
    test/css/complex/callout.css \
    test/css/complex/excel-html.css \
    test/css/empty.css \
    test/css/invalids/1.css \
    test/css/test.css \
    test/csv/double-quotes/check.txt \
    test/csv/double-quotes/input.csv \
    test/csv/normal-quotes/check.txt \
    test/csv/normal-quotes/input.csv \
    test/csv/quoted-with-delim/check.txt \
    test/csv/quoted-with-delim/input.csv \
    test/csv/simple-numbers/check.txt \
    test/csv/simple-numbers/input.csv \
    test/csv/split-sheet/check-1.txt \
    test/csv/split-sheet/check-2.txt \
    test/csv/split-sheet/check-3.txt \
    test/csv/split-sheet/input.csv \
    test/gnumeric/raw-values-1/check.txt \
    test/gnumeric/raw-values-1/input.gnumeric \
    test/gnumeric/test.gnumeric \
    test/json/basic1/check.txt \
    test/json/basic1/input.json \
    test/json/basic2/check.txt \
    test/json/basic2/input.json \
    test/json/basic3/check.txt \
    test/json/basic3/input.json \
    test/json/basic4/check.txt \
    test/json/basic4/input.json \
    test/json/empty-array-1/check.txt \
    test/json/empty-array-1/input.json \
    test/json/empty-array-2/check.txt \
    test/json/empty-array-2/input.json \
    test/json/empty-array-3/check.txt \
    test/json/empty-array-3/input.json \
    test/json-mapped/array-of-arrays-basic/check.txt \
    test/json-mapped/array-of-arrays-basic/input.json \
    test/json-mapped/array-of-arrays-basic/map.json \
    test/json-mapped/array-of-arrays-header/check.txt \
    test/json-mapped/array-of-arrays-header/input.json \
    test/json-mapped/array-of-arrays-header/map.json \
    test/json-mapped/array-of-objects-basic/check.txt \
    test/json-mapped/array-of-objects-basic/input.json \
    test/json-mapped/array-of-objects-basic/map.json \
    test/json-mapped/array-of-objects-header/check.txt \
    test/json-mapped/array-of-objects-header/input.json \
    test/json-mapped/array-of-objects-header/map.json \
    test/json-mapped/nested-repeats-2/check.txt \
    test/json-mapped/nested-repeats-2/input.json \
    test/json-mapped/nested-repeats-2/map.json \
    test/json-mapped/nested-repeats/check.txt \
    test/json-mapped/nested-repeats/input.json \
    test/json-mapped/nested-repeats/map.json \
    test/json/nested1/check.txt \
    test/json/nested1/input.json \
    test/json/nested2/check.txt \
    test/json/nested2/input.json \
    test/json/refs1/check.txt \
    test/json/refs1/input.json \
    test/json/refs1/ref.json \
    test/json-structure/arrays-in-object/check.txt \
    test/json-structure/arrays-in-object/input.json \
    test/json-structure/multiple-ranges/check.txt \
    test/json-structure/multiple-ranges/input.json \
    test/json-structure/nested-arrays/check.txt \
    test/json-structure/nested-arrays/input.json \
    test/json-structure/nested-arrays-mixed-2/check.txt \
    test/json-structure/nested-arrays-mixed-2/input.json \
    test/json-structure/nested-arrays-mixed/check.txt \
    test/json-structure/nested-arrays-mixed/input.json \
    test/json-structure/no-value-nodes/01.json \
    test/json-structure/no-value-nodes/02.json \
    test/json-structure/no-value-nodes/03.json \
    test/json-structure/no-value-nodes/04.json \
    test/json-structure/repeat-objects-2/check.txt \
    test/json-structure/repeat-objects-2/input.json \
    test/json-structure/repeat-objects/check.txt \
    test/json-structure/repeat-objects/input.json \
    test/json/swagger/check.txt \
    test/json/swagger/input.json \
    test/json/validation/i_number_double_huge_neg_exp.json \
    test/json/validation/i_number_huge_exp.json \
    test/json/validation/i_number_neg_int_huge_exp.json \
    test/json/validation/i_number_pos_double_huge_exp.json \
    test/json/validation/i_number_real_neg_overflow.json \
    test/json/validation/i_number_real_pos_overflow.json \
    test/json/validation/i_number_real_underflow.json \
    test/json/validation/i_number_too_big_neg_int.json \
    test/json/validation/i_number_too_big_pos_int.json \
    test/json/validation/i_number_very_big_negative_int.json \
    test/json/validation/i_object_key_lone_2nd_surrogate.json \
    test/json/validation/i_string_1st_surrogate_but_2nd_missing.json \
    test/json/validation/i_string_1st_valid_surrogate_2nd_invalid.json \
    test/json/validation/i_string_incomplete_surrogate_and_escape_valid.json \
    test/json/validation/i_string_incomplete_surrogate_pair.json \
    test/json/validation/i_string_incomplete_surrogates_escape_valid.json \
    test/json/validation/i_string_invalid_lonely_surrogate.json \
    test/json/validation/i_string_invalid_surrogate.json \
    test/json/validation/i_string_invalid_utf-8.json \
    test/json/validation/i_string_inverted_surrogates_U+1D11E.json \
    test/json/validation/i_string_iso_latin_1.json \
    test/json/validation/i_string_lone_second_surrogate.json \
    test/json/validation/i_string_lone_utf8_continuation_byte.json \
    test/json/validation/i_string_not_in_unicode_range.json \
    test/json/validation/i_string_overlong_sequence_2_bytes.json \
    test/json/validation/i_string_overlong_sequence_6_bytes.json \
    test/json/validation/i_string_overlong_sequence_6_bytes_null.json \
    test/json/validation/i_string_truncated-utf-8.json \
    test/json/validation/i_string_utf16BE_no_BOM.json \
    test/json/validation/i_string_utf16LE_no_BOM.json \
    test/json/validation/i_string_UTF-16LE_with_BOM.json \
    test/json/validation/i_string_UTF-8_invalid_sequence.json \
    test/json/validation/i_string_UTF8_surrogate_U+D800.json \
    test/json/validation/i_structure_500_nested_arrays.json \
    test/json/validation/i_structure_UTF-8_BOM_empty_object.json \
    test/json/validation/LICENSE \
    test/json/validation/n_array_1_true_without_comma.json \
    test/json/validation/n_array_a_invalid_utf8.json \
    test/json/validation/n_array_colon_instead_of_comma.json \
    test/json/validation/n_array_comma_after_close.json \
    test/json/validation/n_array_comma_and_number.json \
    test/json/validation/n_array_double_comma.json \
    test/json/validation/n_array_double_extra_comma.json \
    test/json/validation/n_array_extra_close.json \
    test/json/validation/n_array_extra_comma.json \
    test/json/validation/n_array_incomplete_invalid_value.json \
    test/json/validation/n_array_incomplete.json \
    test/json/validation/n_array_inner_array_no_comma.json \
    test/json/validation/n_array_invalid_utf8.json \
    test/json/validation/n_array_items_separated_by_semicolon.json \
    test/json/validation/n_array_just_comma.json \
    test/json/validation/n_array_just_minus.json \
    test/json/validation/n_array_missing_value.json \
    test/json/validation/n_array_newlines_unclosed.json \
    test/json/validation/n_array_number_and_comma.json \
    test/json/validation/n_array_number_and_several_commas.json \
    test/json/validation/n_array_spaces_vertical_tab_formfeed.json \
    test/json/validation/n_array_star_inside.json \
    test/json/validation/n_array_unclosed.json \
    test/json/validation/n_array_unclosed_trailing_comma.json \
    test/json/validation/n_array_unclosed_with_new_lines.json \
    test/json/validation/n_array_unclosed_with_object_inside.json \
    test/json/validation/n_incomplete_false.json \
    test/json/validation/n_incomplete_null.json \
    test/json/validation/n_incomplete_true.json \
    test/json/validation/n_multidigit_number_then_00.json \
    test/json/validation/n_number_0.1.2.json \
    test/json/validation/n_number_-01.json \
    test/json/validation/n_number_0.3e.json \
    test/json/validation/n_number_0.3e+.json \
    test/json/validation/n_number_0_capital_E.json \
    test/json/validation/n_number_0_capital_E+.json \
    test/json/validation/n_number_0.e1.json \
    test/json/validation/n_number_0e.json \
    test/json/validation/n_number_0e+.json \
    test/json/validation/n_number_1_000.json \
    test/json/validation/n_number_1.0e-.json \
    test/json/validation/n_number_1.0e.json \
    test/json/validation/n_number_1.0e+.json \
    test/json/validation/n_number_-1.0..json \
    test/json/validation/n_number_1eE2.json \
    test/json/validation/n_number_.-1.json \
    test/json/validation/n_number_+1.json \
    test/json/validation/n_number_.2e-3.json \
    test/json/validation/n_number_2.e-3.json \
    test/json/validation/n_number_2.e+3.json \
    test/json/validation/n_number_2.e3.json \
    test/json/validation/n_number_-2..json \
    test/json/validation/n_number_9.e+.json \
    test/json/validation/n_number_expression.json \
    test/json/validation/n_number_hex_1_digit.json \
    test/json/validation/n_number_hex_2_digits.json \
    test/json/validation/n_number_infinity.json \
    test/json/validation/n_number_+Inf.json \
    test/json/validation/n_number_Inf.json \
    test/json/validation/n_number_invalid+-.json \
    test/json/validation/n_number_invalid-negative-real.json \
    test/json/validation/n_number_invalid-utf-8-in-bigger-int.json \
    test/json/validation/n_number_invalid-utf-8-in-exponent.json \
    test/json/validation/n_number_invalid-utf-8-in-int.json \
    test/json/validation/n_number_++.json \
    test/json/validation/n_number_minus_infinity.json \
    test/json/validation/n_number_minus_sign_with_trailing_garbage.json \
    test/json/validation/n_number_minus_space_1.json \
    test/json/validation/n_number_-NaN.json \
    test/json/validation/n_number_NaN.json \
    test/json/validation/n_number_neg_int_starting_with_zero.json \
    test/json/validation/n_number_neg_real_without_int_part.json \
    test/json/validation/n_number_neg_with_garbage_at_end.json \
    test/json/validation/n_number_real_garbage_after_e.json \
    test/json/validation/n_number_real_with_invalid_utf8_after_e.json \
    test/json/validation/n_number_real_without_fractional_part.json \
    test/json/validation/n_number_starting_with_dot.json \
    test/json/validation/n_number_U+FF11_fullwidth_digit_one.json \
    test/json/validation/n_number_with_alpha_char.json \
    test/json/validation/n_number_with_alpha.json \
    test/json/validation/n_number_with_leading_zero.json \
    test/json/validation/n_object_bad_value.json \
    test/json/validation/n_object_bracket_key.json \
    test/json/validation/n_object_comma_instead_of_colon.json \
    test/json/validation/n_object_double_colon.json \
    test/json/validation/n_object_emoji.json \
    test/json/validation/n_object_garbage_at_end.json \
    test/json/validation/n_object_key_with_single_quotes.json \
    test/json/validation/n_object_lone_continuation_byte_in_key_and_trailing_comma.json \
    test/json/validation/n_object_missing_colon.json \
    test/json/validation/n_object_missing_key.json \
    test/json/validation/n_object_missing_semicolon.json \
    test/json/validation/n_object_missing_value.json \
    test/json/validation/n_object_no-colon.json \
    test/json/validation/n_object_non_string_key_but_huge_number_instead.json \
    test/json/validation/n_object_non_string_key.json \
    test/json/validation/n_object_repeated_null_null.json \
    test/json/validation/n_object_several_trailing_commas.json \
    test/json/validation/n_object_single_quote.json \
    test/json/validation/n_object_trailing_comma.json \
    test/json/validation/n_object_trailing_comment.json \
    test/json/validation/n_object_trailing_comment_open.json \
    test/json/validation/n_object_trailing_comment_slash_open_incomplete.json \
    test/json/validation/n_object_trailing_comment_slash_open.json \
    test/json/validation/n_object_two_commas_in_a_row.json \
    test/json/validation/n_object_unquoted_key.json \
    test/json/validation/n_object_unterminated-value.json \
    test/json/validation/n_object_with_single_string.json \
    test/json/validation/n_object_with_trailing_garbage.json \
    test/json/validation/n_single_space.json \
    test/json/validation/n_string_1_surrogate_then_escape.json \
    test/json/validation/n_string_1_surrogate_then_escape_u1.json \
    test/json/validation/n_string_1_surrogate_then_escape_u1x.json \
    test/json/validation/n_string_1_surrogate_then_escape_u.json \
    test/json/validation/n_string_accentuated_char_no_quotes.json \
    test/json/validation/n_string_backslash_00.json \
    test/json/validation/n_string_escaped_backslash_bad.json \
    test/json/validation/n_string_escaped_ctrl_char_tab.json \
    test/json/validation/n_string_escaped_emoji.json \
    test/json/validation/n_string_escape_x.json \
    test/json/validation/n_string_incomplete_escaped_character.json \
    test/json/validation/n_string_incomplete_escape.json \
    test/json/validation/n_string_incomplete_surrogate_escape_invalid.json \
    test/json/validation/n_string_incomplete_surrogate.json \
    test/json/validation/n_string_invalid_backslash_esc.json \
    test/json/validation/n_string_invalid_unicode_escape.json \
    test/json/validation/n_string_invalid_utf8_after_escape.json \
    test/json/validation/n_string_invalid-utf-8-in-escape.json \
    test/json/validation/n_string_leading_uescaped_thinspace.json \
    test/json/validation/n_string_no_quotes_with_bad_escape.json \
    test/json/validation/n_string_single_doublequote.json \
    test/json/validation/n_string_single_quote.json \
    test/json/validation/n_string_single_string_no_double_quotes.json \
    test/json/validation/n_string_start_escape_unclosed.json \
    test/json/validation/n_string_unescaped_crtl_char.json \
    test/json/validation/n_string_unescaped_newline.json \
    test/json/validation/n_string_unescaped_tab.json \
    test/json/validation/n_string_unicode_CapitalU.json \
    test/json/validation/n_string_with_trailing_garbage.json \
    test/json/validation/n_structure_100000_opening_arrays.json \
    test/json/validation/n_structure_angle_bracket_..json \
    test/json/validation/n_structure_angle_bracket_null.json \
    test/json/validation/n_structure_array_trailing_garbage.json \
    test/json/validation/n_structure_array_with_extra_array_close.json \
    test/json/validation/n_structure_array_with_unclosed_string.json \
    test/json/validation/n_structure_ascii-unicode-identifier.json \
    test/json/validation/n_structure_capitalized_True.json \
    test/json/validation/n_structure_close_unopened_array.json \
    test/json/validation/n_structure_comma_instead_of_closing_brace.json \
    test/json/validation/n_structure_double_array.json \
    test/json/validation/n_structure_end_array.json \
    test/json/validation/n_structure_incomplete_UTF8_BOM.json \
    test/json/validation/n_structure_lone-invalid-utf-8.json \
    test/json/validation/n_structure_lone-open-bracket.json \
    test/json/validation/n_structure_no_data.json \
    test/json/validation/n_structure_null-byte-outside-string.json \
    test/json/validation/n_structure_number_with_trailing_garbage.json \
    test/json/validation/n_structure_object_followed_by_closing_object.json \
    test/json/validation/n_structure_object_unclosed_no_value.json \
    test/json/validation/n_structure_object_with_comment.json \
    test/json/validation/n_structure_object_with_trailing_garbage.json \
    test/json/validation/n_structure_open_array_apostrophe.json \
    test/json/validation/n_structure_open_array_comma.json \
    test/json/validation/n_structure_open_array_object.json \
    test/json/validation/n_structure_open_array_open_object.json \
    test/json/validation/n_structure_open_array_open_string.json \
    test/json/validation/n_structure_open_array_string.json \
    test/json/validation/n_structure_open_object_close_array.json \
    test/json/validation/n_structure_open_object_comma.json \
    test/json/validation/n_structure_open_object.json \
    test/json/validation/n_structure_open_object_open_array.json \
    test/json/validation/n_structure_open_object_open_string.json \
    test/json/validation/n_structure_open_object_string_with_apostrophes.json \
    test/json/validation/n_structure_open_open.json \
    test/json/validation/n_structure_single_eacute.json \
    test/json/validation/n_structure_single_star.json \
    test/json/validation/n_structure_trailing_\#.json \
    test/json/validation/n_structure_U+2060_word_joined.json \
    test/json/validation/n_structure_uescaped_LF_before_string.json \
    test/json/validation/n_structure_unclosed_array.json \
    test/json/validation/n_structure_unclosed_array_partial_null.json \
    test/json/validation/n_structure_unclosed_array_unfinished_false.json \
    test/json/validation/n_structure_unclosed_array_unfinished_true.json \
    test/json/validation/n_structure_unclosed_object.json \
    test/json/validation/n_structure_unicode-identifier.json \
    test/json/validation/n_structure_UTF8_BOM_no_data.json \
    test/json/validation/n_structure_whitespace_formfeed.json \
    test/json/validation/n_structure_whitespace_U+2060_word_joiner.json \
    test/json/validation/README \
    test/json/validation/y_array_arraysWithSpaces.json \
    test/json/validation/y_array_empty.json \
    test/json/validation/y_array_empty-string.json \
    test/json/validation/y_array_ending_with_newline.json \
    test/json/validation/y_array_false.json \
    test/json/validation/y_array_heterogeneous.json \
    test/json/validation/y_array_null.json \
    test/json/validation/y_array_with_1_and_newline.json \
    test/json/validation/y_array_with_leading_space.json \
    test/json/validation/y_array_with_several_null.json \
    test/json/validation/y_array_with_trailing_space.json \
    test/json/validation/y_number_0e+1.json \
    test/json/validation/y_number_0e1.json \
    test/json/validation/y_number_after_space.json \
    test/json/validation/y_number_double_close_to_zero.json \
    test/json/validation/y_number_int_with_exp.json \
    test/json/validation/y_number.json \
    test/json/validation/y_number_minus_zero.json \
    test/json/validation/y_number_negative_int.json \
    test/json/validation/y_number_negative_one.json \
    test/json/validation/y_number_negative_zero.json \
    test/json/validation/y_number_real_capital_e.json \
    test/json/validation/y_number_real_capital_e_neg_exp.json \
    test/json/validation/y_number_real_capital_e_pos_exp.json \
    test/json/validation/y_number_real_exponent.json \
    test/json/validation/y_number_real_fraction_exponent.json \
    test/json/validation/y_number_real_neg_exp.json \
    test/json/validation/y_number_real_pos_exponent.json \
    test/json/validation/y_number_simple_int.json \
    test/json/validation/y_number_simple_real.json \
    test/json/validation/y_object_basic.json \
    test/json/validation/y_object_duplicated_key_and_value.json \
    test/json/validation/y_object_duplicated_key.json \
    test/json/validation/y_object_empty.json \
    test/json/validation/y_object_empty_key.json \
    test/json/validation/y_object_escaped_null_in_key.json \
    test/json/validation/y_object_extreme_numbers.json \
    test/json/validation/y_object.json \
    test/json/validation/y_object_long_strings.json \
    test/json/validation/y_object_simple.json \
    test/json/validation/y_object_string_unicode.json \
    test/json/validation/y_object_with_newlines.json \
    test/json/validation/y_string_1_2_3_bytes_UTF-8_sequences.json \
    test/json/validation/y_string_accepted_surrogate_pair.json \
    test/json/validation/y_string_accepted_surrogate_pairs.json \
    test/json/validation/y_string_allowed_escapes.json \
    test/json/validation/y_string_backslash_and_u_escaped_zero.json \
    test/json/validation/y_string_backslash_doublequotes.json \
    test/json/validation/y_string_comments.json \
    test/json/validation/y_string_double_escape_a.json \
    test/json/validation/y_string_double_escape_n.json \
    test/json/validation/y_string_escaped_control_character.json \
    test/json/validation/y_string_escaped_noncharacter.json \
    test/json/validation/y_string_in_array.json \
    test/json/validation/y_string_in_array_with_leading_space.json \
    test/json/validation/y_string_last_surrogates_1_and_2.json \
    test/json/validation/y_string_nbsp_uescaped.json \
    test/json/validation/y_string_nonCharacterInUTF-8_U+10FFFF.json \
    test/json/validation/y_string_nonCharacterInUTF-8_U+FFFF.json \
    test/json/validation/y_string_null_escape.json \
    test/json/validation/y_string_one-byte-utf-8.json \
    test/json/validation/y_string_pi.json \
    test/json/validation/y_string_reservedCharacterInUTF-8_U+1BFFF.json \
    test/json/validation/y_string_simple_ascii.json \
    test/json/validation/y_string_space.json \
    test/json/validation/y_string_surrogates_U+1D11E_MUSICAL_SYMBOL_G_CLEF.json \
    test/json/validation/y_string_three-byte-utf-8.json \
    test/json/validation/y_string_two-byte-utf-8.json \
    test/json/validation/y_string_u+2028_line_sep.json \
    test/json/validation/y_string_u+2029_par_sep.json \
    test/json/validation/y_string_uescaped_newline.json \
    test/json/validation/y_string_uEscape.json \
    test/json/validation/y_string_unescaped_char_delete.json \
    test/json/validation/y_string_unicode_2.json \
    test/json/validation/y_string_unicodeEscapedBackslash.json \
    test/json/validation/y_string_unicode_escaped_double_quote.json \
    test/json/validation/y_string_unicode.json \
    test/json/validation/y_string_unicode_U+10FFFE_nonchar.json \
    test/json/validation/y_string_unicode_U+1FFFE_nonchar.json \
    test/json/validation/y_string_unicode_U+200B_ZERO_WIDTH_SPACE.json \
    test/json/validation/y_string_unicode_U+2064_invisible_plus.json \
    test/json/validation/y_string_unicode_U+FDD0_nonchar.json \
    test/json/validation/y_string_unicode_U+FFFE_nonchar.json \
    test/json/validation/y_string_utf8.json \
    test/json/validation/y_string_with_del_character.json \
    test/json/validation/y_structure_lonely_false.json \
    test/json/validation/y_structure_lonely_int.json \
    test/json/validation/y_structure_lonely_negative_real.json \
    test/json/validation/y_structure_lonely_null.json \
    test/json/validation/y_structure_lonely_string.json \
    test/json/validation/y_structure_lonely_true.json \
    test/json/validation/y_structure_string_empty.json \
    test/json/validation/y_structure_trailing_newline.json \
    test/json/validation/y_structure_true_in_array.json \
    test/json/validation/y_structure_whitespace_array.json \
    test/ods/borders/grid-box.ods \
    test/ods/borders/single-cells.ods \
    test/ods/column-width-row-height/input.ods \
    test/ods/date-cell/input.ods \
    test/ods/formatted-text/bold-and-italic.ods \
    test/ods/formula-1/check.txt \
    test/ods/formula-1/input.ods \
    test/ods/formula-2/check.txt \
    test/ods/formula-2/input.ods \
    test/ods/japanese.ods \
    test/ods/raw-values-1/check.txt \
    test/ods/raw-values-1/input.ods \
    test/ods/styles/cell-styles.xml \
    test/ods/styles/number-format.xml \
    test/ods/test.ods \
    test/python/csv_export.py \
    test/python/csv.py \
    test/python/file_load_common.py \
    test/python/gnumeric.py \
    test/python/json.py \
    test/python/module.py \
    test/python/ods.py \
    test/python/perf/test_json.py \
    test/python/xls_xml.py \
    test/python/xlsx.py \
    test/xlsx/background-color/standard.xlsx \
    test/xlsx/boolean-values/check.txt \
    test/xlsx/boolean-values/input.xlsx \
    test/xlsx/borders/colors.xlsx \
    test/xlsx/borders/directions.xlsx \
    test/xlsx/borders/grid-box.xlsx \
    test/xlsx/borders/single-cells.xlsx \
    test/xlsx/column-width-row-height/input.xlsx \
    test/xlsx/data-table/multi-table.xlsx \
    test/xlsx/data-table/one-variable.xlsx \
    test/xlsx/date-cell/input.xlsx \
    test/xlsx/date-time/input.xlsx \
    test/xlsx/doc-structure/unordered-sheet-positions.xlsx \
    test/xlsx/empty-shared-strings/check.txt \
    test/xlsx/empty-shared-strings/input.xlsx \
    test/xlsx/formatted-text/bold-and-italic.xlsx \
    test/xlsx/formatted-text/colored-text.xlsx \
    test/xlsx/formula-array-1/check.txt \
    test/xlsx/formula-array-1/input.xlsx \
    test/xlsx/formula-cells/check.txt \
    test/xlsx/formula-cells/input.xlsx \
    test/xlsx/formula-shared/check.txt \
    test/xlsx/formula-shared/input.xlsx \
    test/xlsx/formula-simple.xlsx \
    test/xlsx/hidden-rows-columns/input.xlsx \
    test/xlsx/matrix-results/input.xlsx \
    test/xlsx/merged-cells/simple.xlsx \
    test/xlsx/number-format/date-time.xlsx \
    test/xls-xml/background-color/standard.xml \
    test/xls-xml/basic/check.txt \
    test/xls-xml/basic/input.xml \
    test/xls-xml/basic-utf-16-be/check.txt \
    test/xls-xml/basic-utf-16-be/input.xml \
    test/xls-xml/basic-utf-16-le/check.txt \
    test/xls-xml/basic-utf-16-le/input.xml \
    test/xls-xml/bold-and-italic/check.txt \
    test/xls-xml/bold-and-italic/input.xml \
    test/xls-xml/borders/colors.xml \
    test/xls-xml/borders/directions.xml \
    test/xls-xml/borders/grid-box.xml \
    test/xls-xml/borders/single-cells.xml \
    test/xls-xml/character-set/input.xml \
    test/xls-xml/colored-text/check.txt \
    test/xls-xml/colored-text/input.xml \
    test/xls-xml/column-width-row-height/input.xml \
    test/xls-xml/date-time/input.xml \
    test/xls-xml/empty-rows/check.txt \
    test/xls-xml/empty-rows/input.xml \
    test/xls-xml/formula-array-1/check.txt \
    test/xls-xml/formula-array-1/input.xml \
    test/xls-xml/formula-cells-1/check.txt \
    test/xls-xml/formula-cells-1/input.xml \
    test/xls-xml/formula-cells-2/check.txt \
    test/xls-xml/formula-cells-2/config.yaml \
    test/xls-xml/formula-cells-2/input.xml \
    test/xls-xml/hidden-rows-columns/input.xml \
    test/xls-xml/leading-whitespace/check.txt \
    test/xls-xml/leading-whitespace/input.xml \
    test/xls-xml/matrix-results/input.xml \
    test/xls-xml/merged-cells/check.txt \
    test/xls-xml/merged-cells/input.xml \
    test/xls-xml/named-colors/check.txt \
    test/xls-xml/named-colors/input-upper.xml \
    test/xls-xml/named-colors/input.xml \
    test/xls-xml/named-colors/run.py \
    test/xls-xml/named-colors/saved-by-excel.xml \
    test/xls-xml/named-expression/check.txt \
    test/xls-xml/named-expression/input.xml \
    test/xls-xml/named-expression-sheet-local/check.txt \
    test/xls-xml/named-expression-sheet-local/input.xml \
    test/xls-xml/number-format/date-time.xml \
    test/xls-xml/raw-values-1/check.txt \
    test/xls-xml/raw-values-1/input.xml \
    test/xls-xml/table/autofilter.xml \
    test/xls-xml/table-offset/input.xml \
    test/xls-xml/table-offset/check.txt \
    test/xls-xml/text-alignment/input.xml \
    test/xls-xml/view/cursor-per-sheet.xml \
    test/xls-xml/view/cursor-split-pane.xml \
    test/xls-xml/view/frozen-pane.xml \
    test/xlsx/named-expression/check.txt \
    test/xlsx/named-expression/input.xlsx \
    test/xlsx/named-expression-sheet-local/check.txt \
    test/xlsx/named-expression-sheet-local/input.xlsx \
    test/xlsx/pivot-table/chart-simple.xlsx \
    test/xlsx/pivot-table/error-values.xlsx \
    test/xlsx/pivot-table/group-by-dates.xlsx \
    test/xlsx/pivot-table/group-by-numbers.xlsx \
    test/xlsx/pivot-table/group-field.xlsx \
    test/xlsx/pivot-table/many-fields.xlsx \
    test/xlsx/pivot-table/mixed-type-field.xlsx \
    test/xlsx/pivot-table/three-pivot-tables-on-one-sheet.xlsx \
    test/xlsx/pivot-table/two-pivot-caches.xlsx \
    test/xlsx/pivot-table/two-tables-one-source.xlsx \
    test/xlsx/raw-values-1/check.txt \
    test/xlsx/raw-values-1/input.xlsx \
    test/xlsx/revision/cell-change-basic.xlsx \
    test/xlsx/table/autofilter-text-filter-1.xlsx \
    test/xlsx/table/autofilter.xlsx \
    test/xlsx/table/table-1.xlsx \
    test/xlsx/table/table-2.xlsx \
    test/xlsx/test.xlsx \
    test/xlsx/text-alignment/input.xlsx \
    test/xlsx/view/cursor-per-sheet.xlsx \
    test/xlsx/view/cursor-split-pane.xlsx \
    test/xlsx/view/frozen-pane.xlsx \
    test/xml/bom/check.txt \
    test/xml/bom/input.xml \
    test/xml/cdata-1/check.txt \
    test/xml/cdata-1/input.xml \
    test/xml/custom-decl-1/check.txt \
    test/xml/custom-decl-1/input.xml \
    test/xml/default-ns/check.txt \
    test/xml/default-ns/input.xml \
    test/xml/doctype/html.xml \
    test/xml/encoded-attrs/test1.xml \
    test/xml/encoded-char/check.txt \
    test/xml/encoded-char/input.xml \
    test/xml-mapped/attribute-basic/check.txt \
    test/xml-mapped/attribute-basic/input.xml \
    test/xml-mapped/attribute-basic/map.xml \
    test/xml-mapped/attribute-namespace/check.txt \
    test/xml-mapped/attribute-namespace/input.xml \
    test/xml-mapped/attribute-namespace/map.xml \
    test/xml-mapped/attribute-range-self-close/check.txt \
    test/xml-mapped/attribute-range-self-close/input.xml \
    test/xml-mapped/attribute-range-self-close/map.xml \
    test/xml-mapped/attribute-single-element-2/check.txt \
    test/xml-mapped/attribute-single-element-2/input.xml \
    test/xml-mapped/attribute-single-element-2/map.xml \
    test/xml-mapped/attribute-single-element/check.txt \
    test/xml-mapped/attribute-single-element/input.xml \
    test/xml-mapped/attribute-single-element/map.xml \
    test/xml-mapped/content-basic/check.txt \
    test/xml-mapped/content-basic/input.xml \
    test/xml-mapped/content-basic/map.xml \
    test/xml-mapped/content-namespace-2/check.txt \
    test/xml-mapped/content-namespace-2/input.xml \
    test/xml-mapped/content-namespace-2/map.xml \
    test/xml-mapped/content-namespace/check.txt \
    test/xml-mapped/content-namespace/input.xml \
    test/xml-mapped/content-namespace/map.xml \
    test/xml-mapped/fuel-economy/check.txt \
    test/xml-mapped/fuel-economy/input.xml \
    test/xml-mapped/fuel-economy/map.xml \
    test/xml-mapped/nested-repeats-2/check.txt \
    test/xml-mapped/nested-repeats-2/input.xml \
    test/xml-mapped/nested-repeats-2/map.xml \
    test/xml-mapped/nested-repeats-3/check.txt \
    test/xml-mapped/nested-repeats-3/input.xml \
    test/xml-mapped/nested-repeats-3/map.xml \
    test/xml-mapped/nested-repeats-4/check.txt \
    test/xml-mapped/nested-repeats-4/input.xml \
    test/xml-mapped/nested-repeats-4/map.xml \
    test/xml-mapped/nested-repeats/check.txt \
    test/xml-mapped/nested-repeats/input.xml \
    test/xml-mapped/nested-repeats/map.xml \
    test/xml/no-decl-1/check.txt \
    test/xml/no-decl-1/input.xml \
    test/xml/ns-alias-1/check.txt \
    test/xml/ns-alias-1/input.xml \
    test/xml/osm/street-in-aizu.osm \
    test/xml/parse-only/rss/input.xml \
    test/xml/self-closing-root/check.txt \
    test/xml/self-closing-root/input.xml \
    test/xml/simple/check.txt \
    test/xml/simple/input.xml \
    test/xml/single-quote/check.txt \
    test/xml/single-quote/input.xml \
    test/xml-structure/attribute-1/check.txt \
    test/xml-structure/attribute-1/input.xml \
    test/xml-structure/basic-1/check.txt \
    test/xml-structure/basic-1/input.xml \
    test/xml-structure/basic-2/check.txt \
    test/xml-structure/basic-2/input.xml \
    test/xml-structure/basic-3/check.txt \
    test/xml-structure/basic-3/input.xml \
    test/xml-structure/namespace-default/check.txt \
    test/xml-structure/namespace-default/input.xml \
    test/xml-structure/nested-repeat-1/check.txt \
    test/xml-structure/nested-repeat-1/input.xml \
    test/xml/underscore-identifier/check.txt \
    test/xml/underscore-identifier/input.xml \
    test/yaml/basic1/input.yaml \
    test/yaml/basic2/input.yaml \
    test/yaml/basic3/input.yaml \
    test/yaml/boolean/input.yaml \
    test/yaml/empty-value-map-1/input.yaml \
    test/yaml/empty-value-map-2/input.yaml \
    test/yaml/empty-value-sequence-1/input.yaml \
    test/yaml/empty-value-sequence-2/input.yaml \
    test/yaml/invalids/1.yaml \
    test/yaml/invalids/2.yaml \
    test/yaml/invalids/3.yaml \
    test/yaml/literal-block-1/input.yaml \
    test/yaml/literal-block-2/input.yaml \
    test/yaml/map-key-1/input.yaml \
    test/yaml/multi-line-1/input.yaml \
    test/yaml/multi-line-2/input.yaml \
    test/yaml/null/input.yaml \
    test/yaml/quoted-string/input.yaml \
    test/yaml/swagger/input.yaml \
    test/yaml/url/input.yaml

EXTRA_DIST = \
	CHANGELOG \
	LICENSE \
	README.md \
	liborcus.pc.in \
	autogen.sh \
	$(bin_data) \
	$(doc_data) \
	$(doc_example_data) \
	$(misc_data) \
	$(slickedit_data) \
	$(test_data)

.PHONY: distclean-local dist-hook doc-doxygen doc-sphinx doc

distclean-local:
	rm -rf *.pc

dist-hook:
	git log --date=short --pretty="format:@%cd  %an  <%ae>  [%H]%n%n%s%n%n%e%b" | sed -e "s|^\([^@]\)|\t\1|" -e "s|^@||" >$(distdir)/ChangeLog


doc-doxygen:
	@echo "Building documentation by doxygen..."
	@cd doc && doxygen doxygen.conf

doc-sphinx:
	@echo "Building documentation by sphinx..."
	@sphinx-build -b html ./doc/ ./doc/_build

doc: doc-doxygen doc-sphinx



